# markmoji-social

./: pyproject.toml
markmoji_social/: handlers.py
tests/: test_all.py  test_plugin.py
